nav whitespace bug solved

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ html body {
 header {
 	width: 100%;
 	margin-top: 0px;
+	margin-bottom: 30px;
 	background-image: url('../img/header.png');
 } 
 #title {
@@ -24,7 +25,6 @@ header {
 /* wrapper */
 #wrapper {
 	width: 75%;
-￼	height: auto;
     margin-left: auto;
     margin-right: auto;
     background-color: rgb(247,246,242);
@@ -39,12 +39,14 @@ nav {
     font-size: 18px; 
     margin-bottom: 10px;
 }  
+nav ul { 
+    padding: 0px;
+    margin: 0px;
+} 
 nav ul li { 
     display: inline;  
 }  
 nav ul li a {  
-	/* TODO: enabled this to test left margin. It has to be removed
-	float: left; */
     display: inline-block;  
     padding: 15px 15px;  
     color: #575c7d;  
